# rust-gmail

./: Cargo.toml
src/: cmd.rs  config.rs  error.rs  goauth.rs  main.rs
src/cmd/: base.rs  init.rs  refresh.rs  send.rs  whoami.rs
