[package]
name = "gmail"
version = "0.1.0"
authors = ["NAKANO Hideo <pinarello.marvel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
clap = "3.0.0-beta.1"
lettre = "*"
lettre_email = "*"
serde_json = "*"
